Change NodaTime-All.sln to NodaTime-Web.sln.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
       GIT_REF: ${{ github.ref }}
       GIT_SHA: ${{ github.sha }}
       Configuration: Release
-      SolutionFile: .\src\NodaTime-All.sln
+      SolutionFile: .\src\NodaTime-Web.sln
 
     runs-on: windows-latest
 
