--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,8 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 2.1.818
+        dotnet-version: 6.0.x
+        include-prerelease: false
         
         
     - name: Restore dependencies
