--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,10 +25,10 @@ jobs:
       with:
         ref: 2.4.x
 
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v3
+    - name: Install .NET 6
+      uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: 6.0.x
+        dotnet-version: '6.0.x'
         include-prerelease: false
         
         
