--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
       run: dotnet pack $Env:SolutionFile --no-restore --no-build --configuration $Env:Configuration  -o ./nuget
 
     - name: Sign packages
-      if: github.repository_owner == 'GeneXusLabs' && github.event_name == 'pull_request'
+      if: github.repository_owner == 'GeneXusLabs' && !(github.event_name == 'pull_request')
       env:
         TIMESTAMPER_URL: ${{ secrets.CODE_SIGN_CERTIFICATE_TIMESTAMPER_URL }}
         PFX_BASE64: ${{ secrets.CODE_SIGN_CERTIFICATE_BASE64 }}
@@ -58,12 +58,12 @@ jobs:
         }
         
     - name: Configure Azure Artifacts feed
-      if: github.repository_owner == 'GeneXusLabs' && steps.buildVariables.outputs.SHOULD_DEPLOY == 'true'
+      if: github.repository_owner == 'GeneXusLabs' && !(github.event_name == 'pull_request')
       run: |
         $IsPrerelease = [System.Convert]::ToBoolean($Env:IsPrerelease)
 
     - name: Push packages
-      if: github.repository_owner == 'GeneXusLabs' && steps.buildVariables.outputs.SHOULD_DEPLOY == 'true'
+      if: github.repository_owner == 'GeneXusLabs' && !(github.event_name == 'pull_request')
       env:
         NuGetFeedURL: https://api.nuget.org/v3/index.json
       run: |
