--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,11 +21,10 @@ jobs:
     - name: Check out our repo
       uses: actions/checkout@v3
 
-    - name: Install .NET 6
-      uses: actions/setup-dotnet@v2
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: '6.0.x'
-        include-prerelease: false
+        dotnet-version: 2.1.818
         
     - name: Restore dependencies
       run: dotnet restore $Env:SolutionFile
