--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
       run: dotnet test --no-build --verbosity normal $Env:SolutionFile -c $Env:Configuration
     
     - name: Pack
-      run: dotnet pack $Env:SolutionFile --no-restore --no-build --configuration $Env:Configuration  -o ./nuget
+      run: dotnet pack $Env:SolutionFile --no-restore --no-build --configuration $Env:Configuration  
 
     - name: Sign packages
       if: github.repository_owner == 'GeneXusLabs' && !(github.event_name == 'pull_request')
@@ -51,7 +51,7 @@ jobs:
         $bytes = [Convert]::FromBase64String($Env:PFX_BASE64)
         [IO.File]::WriteAllBytes($codesign_pfx, $bytes)
 
-        Get-ChildItem ".\nuget\*.nupkg" -Recurse | ForEach-Object {
+        Get-ChildItem ".\*.nupkg" -Recurse | ForEach-Object {
           dotnet nuget sign $_.FullName --certificate-path $codesign_pfx --certificate-password $Env:PFX_PASS --timestamper $Env:TIMESTAMPER_URL
         }
         
@@ -64,7 +64,7 @@ jobs:
         $totalPackages  = 0
         $pushedToNuget  = 0
 
-        Get-ChildItem ".\nuget\*.nupkg" -Recurse | ForEach-Object {
+        Get-ChildItem ".\*.nupkg" -Recurse | ForEach-Object {
           $PushToNugetArgs  = @("nuget", "push", $_.FullName, "--source", $Env:NuGetFeedURL, "--api-key", "${{ secrets.NUGET_ORG_TOKEN }}")
           $PushToNugetArgs  += "--skip-duplicate"
 
